# ithome-ironman-2023-drf

./: README.md  manage.py  pyproject.toml
docs/: D01.md  D02.md  D03.md  D04.md  D05.md  D06.md  D07.md  D08.md  D09.md  D10.md  D11.md  D12.md  D13.md  D14.md  D15.md  D16.md  D17.md  D18.md  D19.md  D20.md  D21.md  D22.md  D23.md  D24.md  D25.md  D26.md  D27.md  D28.md  D29.md  D30.md
server/: settings.py  urls.py
server/app/common/: views.py
server/app/todo/: admin.py  apps.py  filters.py  models.py  serializers.py  views.py
server/app/todo/migrations/: 0001_initial.py  0002_task_is_finish.py  0003_tag.py  0004_task_tags.py  0005_tag_description.py  0006_task_end_at.py  0007_alter_task_end_at.py  0008_task_created_at_task_updated_at.py  0009_category.py  0010_task_category.py  0011_set_default_category_to_tasks.py  0012_alter_task_category.py  0013_alter_task_created_at.py  0014_alter_task_updated_at.py  0015_task_attachment.py  0016_task_creator.py  0017_set_creator_to_tasks.py  0018_alter_task_creator.py
server/utils/: models.py  pagination.py
